# trans-and

./: .gitattributes  .gitignore  AGENTS.md  PRDdesign.md  README.md  build.gradle.kts  gradle.properties  gradlew  local.properties  replacements.txt  settings.gradle.kts  temp_settings.kt  temp_strings.txt  test_session_fixes.py  test_whisper.py
.git.bfg-report/2025-10-30/12-15-49/: cache-stats.txt  changed-files.txt  object-id-map.old-new.txt
.git.bfg-report/2025-10-30/12-18-10/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.github/: copilot-instructions.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_bridge.cpp
docs/: implementation-notes.md  incident_postmortem.md  issue2advice.md  issue3.md  issue4.md  issue5.md  issue6.md  issueadvice.md  issuecadvice.md  migration-plan-flutter.md  migration-progress-2025-10-27.md  offline-voice-roadmap.md  project-evaluation.md  realtime-issues-2025-10-27.md  realtime-update-summary-zh.md  webrtc-negotiation-fix.md  项目评价与建议.md
flutter_app/: README.md  analysis_options.yaml  gradlew  gradlew.bat  pubspec.yaml  test_webrtc.dart
flutter_app/Flutter-WebRTC-AI-Voice-Assistant-For-OpenAI-main/: README.md  pubspec.yaml
flutter_app/Flutter-WebRTC-AI-Voice-Assistant-For-OpenAI-main/lib/: main.dart  main_screen.dart  openai_server.dart
flutter_app/lib/: bootstrap.dart  main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: smoke_test.dart  widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
scripts/: run-tests.ps1
(+136 files in other folders)
