cmake_minimum_required(VERSION 3.22.1)

project(transand_whisper_bridge LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(WHISPER_THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../third_party/whisper.cpp)
set(WHISPER_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/whispercpp-build)

set(WHISPER_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(WHISPER_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(WHISPER_BUILD_SERVER OFF CACHE BOOL "" FORCE)
set(WHISPER_BUILD_SHARED_LIB OFF CACHE BOOL "" FORCE)
set(WHISPER_BUILD_STANDALONE OFF CACHE BOOL "" FORCE)
set(GGML_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GGML_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GGML_OPENMP OFF CACHE BOOL "" FORCE)
set(WHISPER_OPENBLAS OFF CACHE BOOL "" FORCE)
set(WHISPER_CUBLAS OFF CACHE BOOL "" FORCE)
set(WHISPER_METAL OFF CACHE BOOL "" FORCE)
set(WHISPER_CLBLAST OFF CACHE BOOL "" FORCE)
set(GGML_AVX OFF CACHE BOOL "" FORCE)
set(GGML_AVX2 OFF CACHE BOOL "" FORCE)
set(GGML_AVX512 OFF CACHE BOOL "" FORCE)
set(GGML_FMA OFF CACHE BOOL "" FORCE)
set(GGML_F16C OFF CACHE BOOL "" FORCE)
set(GGML_QKK_64 OFF CACHE BOOL "" FORCE)
set(GGML_NATIVE OFF CACHE BOOL "" FORCE)

add_subdirectory(${WHISPER_THIRD_PARTY_DIR} ${WHISPER_BUILD_DIR})

add_library(whisper-bridge SHARED whisper_bridge.cpp)

target_include_directories(whisper-bridge
    PRIVATE
        ${WHISPER_THIRD_PARTY_DIR}/include
)

target_link_libraries(whisper-bridge
    PRIVATE
        whisper
        log
        android
)
